# pt2itp

./: .eslintrc.json  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.js  package-lock.json  package.json
.circleci/: circle.yml  config.yml
cloudformation/: ci.template.js
docs/: index.html
lib/: analyze.js  cluster.js  copy.js  debug.js  duality.js  explode.js  feat.js  freq.js  geocode.js  help.js  index.js  interpolize.js  map.js  match.js  split.js  test.js  testcsv.js  tokenize.js  units.js
native/: Cargo.toml
native/pt2itp-lib/: Cargo.toml
native/pt2itp-lib/src/: lib.rs
native/pt2itp-lib/src/pg/: address.rs  addresscluster.rs  polygon.rs
native/pt2itp-lib/src/text/: mod.rs  replace.rs  tokens.rs
native/pt2itp-lib/src/types/: address.rs  context.rs  mod.rs  network.rs  polygon.rs
native/src/: lib.rs
native/src/classify/: mod.rs
native/src/conflate/: mod.rs
native/src/consensus/: agreement.rs  mod.rs
native/src/convert/: mod.rs
native/src/dedupe/: mod.rs
native/src/map/: mod.rs
native/src/namewrap/: mod.rs
native/src/pg/: address.rs  addresscluster.rs  intersections.rs  mod.rs  network.rs  networkcluster.rs  polygon.rs
native/src/stats/: count.rs  explode.rs  mod.rs  tree.rs
native/src/stream/: addr.rs  geo.rs  mod.rs  net.rs  poly.rs
native/src/text/: diacritics.rs  mod.rs  replace.rs  titlecase.rs  tokens.rs
native/src/types/: address.rs  context.rs  hecate.rs  mod.rs  name.rs  network.rs  polygon.rs
native/src/util/: linker.rs
scripts/: publish.sh  token.js
test/: asgeojson.test.js  (+36 more)
(+1616 files in other folders)
