[package]
name = "pt2itp"
version = "0.1.0"
authors = ["ingalls <ingalls@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "pt2itp"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2"

[dependencies]
crossbeam = "0.7"
num_cpus = "1.10"
lazy_static = "1.3.0"
regex = "1.1"
rstar = "0.4"
postgis = "0.6.0"
geo = "0.12.2"
neon = "0.2"
neon-serde = "0.1.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
fancy-regex = "0.1.0"
memchr = "2.0.2"
geocoder-abbreviations = { git = "https://github.com/mapbox/geocoder-abbreviations", rev = "ec19b7920571c5e0acc776924073f343238e9b85" }
unicode-segmentation = "1.3.0"
kodama = "0.1"

[dependencies.geojson]
version = "0.16.0"
features = [
    "geo-types"
]

[dependencies.postgres]
version = "0.15.2"
features = [
    "with-serde_json"
]
